--- a/server/package.json
+++ b/server/package.json
@@ -11,21 +11,27 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
     "jsonwebtoken": "^8.1.1",
+    "jwt-simple": "^0.5.1",
     "logger": "^0.0.1",
     "mocha": "^5.0.1",
     "moment": "^2.20.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "qs": "^6.5.1",
     "request": "^2.83.0",
     "supertest": "^3.0.0"
