--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
+    "helmet": "^3.11.0",
     "jsonwebtoken": "^8.1.1",
     "jwt-simple": "^0.5.1",
     "logger": "^0.0.1",
