--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start-client": "cd ./client && yarn start",
-    "start-server": "cd ./server && yarn start"
+    "start-client": "cd ./client && yarn start && cd ..",
+    "start-server": "cd ./server && yarn start && cd ..",
+    "start": "yarn start-server && yarn start-client"
   },
   "author": "kwadwo amankwa",
   "dependencies": {
