--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "kwadwo amankwa",
   "dependencies": {
     "jwt-simple": "^0.5.1",
+    "menu-planner-utils": "./custom/menu-planner-utils/",
     "prop-types": "^15.6.1",
     "react-redux": "^5.0.7",
     "redux-devtools": "^3.4.1"
