--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "prop-types": "^15.6.1",
     "react-redux": "^5.0.7",
     "redux-devtools": "^3.4.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
