--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acl": "^0.4.11",
     "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
