--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,6 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001/",
   "devDependencies": {}
 }
