--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "test": "CI=true react-app-rewired test  --env=jsdom",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001/",
